
Thu Dec 16 19:56:24 PST 1999
(KainX)

API changes here, all in order to make E-Disk and E-MemWatch be able to toggle
between the old arrangement and the new.  So basically, you can now move
gadgets to new locations.

-------------------------------------------------------------------------------

Mon Dec 20 18:28:37 EST 1999
(Christian)

Added a destructor for RGB_buf's. From epplet.h:

/* free an RGB buffer */
void            Epplet_free_rgb_buf(RGB_buf buf);

I think the user shouldn't have to think about the internals of an RGB_buf
in order to free it.

-------------------------------------------------------------------------------

Mon Dec 20 18:32:58 EST 1999
(Christian)

More work on the Mountbox. Changing backgrounds and default icons should
work on runtime now, modifying and adding mountpoint types too. Deleting
still needs to be done. Oh, and untested, btw.

Damn. I'm getting sick.

-------------------------------------------------------------------------------

Tue Dec 28 00:31:03 EST 1999
(Christian)

Textboxes can now be hidden.

-------------------------------------------------------------------------------

Tue Dec 28 00:32:07 EST 1999
(Christian)

More E-Mountbox stuff. Config dialog now changes dynamically, depending
on whether you have patterns for mathching mountpoint types or not.
Deleting of mountpoint types should work. Still needs more debugging...

-------------------------------------------------------------------------------

Mon Jan  3 15:09:24 PST 2000
(KainX)

No, this is version 0.5, not 0.6, Tom.

-------------------------------------------------------------------------------

Tue Jan  4 20:57:24 PST 2000
(KainX)

Final preparations for the release of 0.5.

-------------------------------------------------------------------------------

Tue Jan  5 17:02:26 GMT 2000
(gilbertt)

Am I too late for 0.5?

Just cleaning up the help a bit. Sorry about the version thing btw, I guess
I have a thing for the number 6 or something?

:)
