@@ -1,7 +1,7 @@
 /*****************************************************************************/
 /* Enlightenment - The Window Manager that dares to do what others don't     */
 /*****************************************************************************/
-/* Copyright (C) 1997 - 1999 Carsten Haitzler (The Rasterman)                */
+/* Copyright (C) 1997 - 2000 Carsten Haitzler (The Rasterman)                */
 /*                                                                           */
 /* This program and utilites is free software; you can redistribute it       */
 /* and/or modify it under the terms of the License shown in COPYING          */
