@@ -1768,3 +1768,9 @@ I have a thing for the number 6 or something?
 
 :)
 
+-------------------------------------------------------------------------------
+
+Wed Jan  5 20:11:40 PST 2000
+(KainX)
+
+New version number and copyright dates that include 2000.
